manifests/deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"event-bus:latest","namespace":"dhbw-exercise-1"},"fieldPath":"spec.template.spec.containers[?(@.name==\"event-bus\")].image","pause":"false"}]'
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"posts"},{"apiVersion":"apps/v1","kind":"Deployment","name":"comments"},{"apiVersion":"apps/v1","kind":"Deployment","name":"query"},{"apiVersion":"apps/v1","kind":"Deployment","name":"moderation"}]'
  labels:
    app: event-bus
    app.kubernetes.io/component: event-bus
    app.kubernetes.io/instance: event-bus
    app.kubernetes.io/part-of: dhbw-exercise-1
    app.openshift.io/runtime: nodejs
  name: event-bus
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: event-bus
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: event-bus
        deploymentconfig: event-bus
    spec:
      containers:
      - image: replace/me/event-bus:latest
        imagePullPolicy: Always
        name: event-bus
        ports:
        - containerPort: 4005
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
