manifests/deploy/k8s/svc-2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: event-bus
    app.kubernetes.io/component: event-bus
    app.kubernetes.io/instance: event-bus
    app.kubernetes.io/part-of: dhbw-exercise-1
  name: docker-compose_dhbw-exercise1-nodejs-eventbus_1
spec:
  ports:
  - name: 4005-tcp
    port: 4005
    protocol: TCP
    targetPort: 4005
  selector:
    app: event-bus
    deploymentconfig: event-bus
  sessionAffinity: None
  type: ClusterIP
